# newsletter-digest

./: .env.example  .gitignore  CLAUDE.md  articles.xml  daily-digest.xml  index.html  pyproject.toml
.github/workflows/: daily.yml
src/: config.py  fetcher.py  generator.py  main.py  processor.py  server.py  storage.py
src/models/: base.py  claude.py  kimi.py
